--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "parcel index.html",
+    "dev": "parcel src/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,5 +16,8 @@
     "eslint-plugin-import": "^2.27.5",
     "parcel-bundler": "^1.12.5",
     "prettier": "^2.8.8"
-  }
+  },
+  "browserslist": [
+    "last 2 Firefox versions"
+  ]
 }
